@@ -2,4 +2,4 @@
 beacon-effectivity=
 
 [description]
-quality-bonus=Degradation+100%
+quality-bonus=Degradation
