@@ -2,6 +2,7 @@
 Version: 1.0.7
 Date: ????
   Changes:
+    - Removed '+100%' from degradation tooltips to pre-empt the fix on experimental.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 2025-05-02
